[gd_scene load_steps=8 format=3 uid="uid://bg17n0mlmfwd4"]

[ext_resource type="Script" path="res://scenes/game/score_ui.gd" id="1_x7aix"]
[ext_resource type="Theme" uid="uid://bi6y5204pt206" path="res://assets/themes/bigButtons.tres" id="2_fy33p"]
[ext_resource type="Texture2D" uid="uid://ck5xykvgh1ccu" path="res://assets/UI/scoreuileft.png" id="3_0hv7y"]
[ext_resource type="FontFile" uid="uid://brtyx1h7yk07v" path="res://assets/fonts/Bungee-Regular.otf" id="4_ru5fp"]
[ext_resource type="Texture2D" uid="uid://dkcm56nxb6556" path="res://assets/UI/scoreuiright.png" id="5_8374y"]

[sub_resource type="LabelSettings" id="LabelSettings_wtkdi"]
font_size = 20

[sub_resource type="LabelSettings" id="LabelSettings_w28lb"]
font_size = 18
font_color = Color(0, 0, 0, 1)

[node name="ScoreUi" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_x7aix")

[node name="RoundsUI" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 494.0
offset_top = 566.0
offset_right = 658.0
offset_bottom = 635.0
theme = ExtResource("2_fy33p")
color = Color(0.0784314, 0.0784314, 0.0784314, 1)

[node name="RoundsLabel" type="Label" parent="RoundsUI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -53.0
offset_top = 21.0
offset_right = 53.0
offset_bottom = 44.0
grow_horizontal = 2
text = "Rounds left: 0"
label_settings = SubResource("LabelSettings_wtkdi")
horizontal_alignment = 1

[node name="Player1UI" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 12.0
offset_top = 526.0
offset_right = 428.0
offset_bottom = 765.0
scale = Vector2(0.507752, 0.507752)
texture = ExtResource("3_0hv7y")

[node name="ScoreLabel1" type="Label" parent="Player1UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 26.3664
offset_top = 49.8741
offset_right = 78.3665
offset_bottom = 75.8741
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.96207, 1.96207)
theme_override_fonts/font = ExtResource("4_ru5fp")
text = "TEMP"
label_settings = SubResource("LabelSettings_w28lb")
horizontal_alignment = 1
uppercase = true

[node name="Player2UI" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 924.0
offset_top = 526.0
offset_right = 1340.0
offset_bottom = 765.0
scale = Vector2(0.507752, 0.507752)
texture = ExtResource("5_8374y")
flip_h = true

[node name="ScoreLabel2" type="Label" parent="Player2UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -127.252
offset_top = 49.8741
offset_right = -75.2519
offset_bottom = 75.8741
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.96207, 1.96207)
theme_override_fonts/font = ExtResource("4_ru5fp")
text = "TEMP"
label_settings = SubResource("LabelSettings_w28lb")
horizontal_alignment = 1
uppercase = true
